--- a/NEWS
+++ b/NEWS
@@ -11,3 +11,8 @@ Changes in version 0.99.5:
 + Replaced RCurl with httr for Windows compatibility
 Changes in version 0.99.6:
 + Updated filename capitalizations to fix build error
+Changes in version 0.99.7:
++ Added citation
++ Updated README 
++ Changed heatmap plotting default to FALSE
++ Corrected curly bracket placement in wrapper
