Updated version number for release

--- a/NEWS
+++ b/NEWS
@@ -11,7 +11,8 @@ Changes in version 0.99.5:
 + Replaced RCurl with httr for Windows compatibility
 Changes in version 0.99.6:
 + Updated filename capitalizations to fix build error
-Changes in version 0.99.7:
+Changes in version 1.8.1:
++ Synced version with BioC
 + Added citation
 + Updated README 
 + Changed heatmap plotting default to FALSE
